# sherlockml

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  contracts.py  detective.py  doctor.py  engineer.py  git_integration.py  graph.py  infra.py  moderator.py  reporting.py  statistician.py  tracker.py
api/: __init__.py  main.py
dashboard/: README.md  __init__.py  app.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  IMPLEMENTATION_MATRIX.md  RUNBOOK.md  STUDY_GUIDE.md
docs/demo/: DEMO_WALKTHROUGH.md  make_pdf.py
docs/demo/video/: narration.txt
ml/: __init__.py  contract.py  data.py  drift.py  evaluation.py  train.py
models/: pipeline_contract.json
simulator/: __init__.py  incidents.py
tests/: test_api.py  test_graph.py  test_ml_core.py
